// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangesetLastSynced renders not scheduled 1`] = `
<small
  className="text-muted"
>
  Last synced 
  10 minutes
   ago.
   
  <span
    data-tooltip="Not scheduled for syncing. Click to prioritize refresh"
  >
    <svg
      className="mdi-icon icon-inline cursor-pointer"
      fill="currentColor"
      height={24}
      onClick={[Function]}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,18A6,6 0 0,1 6,12C6,11 6.25,10.03 6.7,9.2L5.24,7.74C4.46,8.97 4,10.43 4,12A8,8 0 0,0 12,20V23L16,19L12,15M12,4V1L8,5L12,9V6A6,6 0 0,1 18,12C18,13 17.75,13.97 17.3,14.8L18.76,16.26C19.54,15.03 20,13.57 20,12A8,8 0 0,0 12,4Z"
      />
    </svg>
  </span>
</small>
`;

exports[`ChangesetLastSynced renders scheduled 1`] = `
<small
  className="text-muted"
>
  Last synced 
  10 minutes
   ago.
   
  <span
    data-tooltip="Next refresh in 1 day. Click to prioritize refresh"
  >
    <svg
      className="mdi-icon icon-inline cursor-pointer"
      fill="currentColor"
      height={24}
      onClick={[Function]}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,18A6,6 0 0,1 6,12C6,11 6.25,10.03 6.7,9.2L5.24,7.74C4.46,8.97 4,10.43 4,12A8,8 0 0,0 12,20V23L16,19L12,15M12,4V1L8,5L12,9V6A6,6 0 0,1 18,12C18,13 17.75,13.97 17.3,14.8L18.76,16.26C19.54,15.03 20,13.57 20,12A8,8 0 0,0 12,4Z"
      />
    </svg>
  </span>
</small>
`;

exports[`ChangesetLastSynced renders with refresh disabled 1`] = `
<small
  className="text-muted"
>
  Last synced 
  10 minutes
   ago.
   
</small>
`;
